# Tightrope

./: .gitignore  .gitmodules  README.md  update.sh
backend/: Cargo.toml  example.env
backend/src/: cors.rs
backend/src/entity/: event.rs  metric.rs
backend/src/v1/: metric.rs
db/: .gitignore
db/backend/: Cargo.toml
db/backend/src/: fitness_runtime.rs  main.rs
db/backend/src/auth/: mod.rs
db/backend/src/entity/: goal.rs  measurement.rs  mod.rs
db/backend/src/v1/: mod.rs  user.rs
db/frontend/: .eslintrc.json  index.html  package.json  tsconfig.json
db/frontend/config/: config.dev.ts  config.ts
db/frontend/src/: App.vue  intl.ts  main.ts  measurement.ts  routes.ts
db/frontend/src/api/: measurement.ts  metric.ts
db/frontend/src/component/: MetricGraph.vue  MetricGraphList.vue
db/migration/: 20230208185339_weight.sql  20230217173122_jstime.sql  20230219184239_metrics.sql  20230306001407_measurementfix.sql  20230311195528_no-global-metrics.sql
db/migration/.trash/: 20230306001133_foreignkeys.sql
example-configs/: systemd-tightrope.service  tightrope.nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/config/: config.dev.ts  config.prod.ts
frontend/src/: App.vue  charts.ts  keycloak.ts  main.ts  routes.ts
frontend/src/api/: index.ts
frontend/src/component/: MeasurementTable.vue  NavigationMenu.vue  TrackerTimeFrameSelector.vue  UserBar.vue
frontend/src/store/: app.ts
frontend/src/style/: _colors.scss  _responsive.scss
frontend/src/view/: HomeView.vue  LoadingView.vue
(+32 files in other folders)
