[package]
name = "fitness-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
rocket = { version = "0.5.0-rc.2", features = [ "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
reqwest = { version = "0.11.14", features = ["blocking", "native-tls", "json"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql" ] }

[dependencies.jsonwebtoken]
# Uses my fork until https://github.com/Keats/jsonwebtoken/issues/252 is resolved.
# This fork uses a hackey workaround that shouldn't cause any issues in this project
#version = "8.2.0",
git = "https://github.com/NateSeymour/jsonwebtoken.git"
features = [ "use_pem" ]
